@@ -419,7 +419,7 @@ public class DatasetSQLManage {
                 List<XpackPluginsDatasourceVO> xpackPluginsDatasourceVOS = pluginManage.queryPluginDs();
                 List<XpackPluginsDatasourceVO> list = xpackPluginsDatasourceVOS.stream().filter(ele -> StringUtils.equals(ele.getType(), type)).toList();
                 if (ObjectUtils.isNotEmpty(list)) {
-                    XpackPluginsDatasourceVO first = list.getFirst();
+                    XpackPluginsDatasourceVO first = list.get(0);
                     DsTypeDTO dto = new DsTypeDTO();
                     dto.setName(first.getName());
                     dto.setCatalog(first.getCategory());
