@@ -73,7 +73,7 @@ public class DataSourceManage {
             List<XpackPluginsDatasourceVO> xpackPluginsDatasourceVOS = pluginManage.queryPluginDs();
             List<XpackPluginsDatasourceVO> list = xpackPluginsDatasourceVOS.stream().filter(ele -> StringUtils.equals(ele.getType(), type)).toList();
             if (ObjectUtils.isNotEmpty(list)) {
-                XpackPluginsDatasourceVO first = list.getFirst();
+                XpackPluginsDatasourceVO first = list.get(0);
                 flag = first.getFlag();
             }
         }
