@@ -500,7 +500,7 @@ public class ExportCenterManage implements BaseExportApi {
                 if (crossDs) {
                     provider = ProviderFactory.getDefaultProvider();
                 } else {
-                    provider = ProviderFactory.getProvider(dsList.getFirst());
+                    provider = ProviderFactory.getProvider(dsList.get(0));
                 }
                 SQLMeta sqlMeta = new SQLMeta();
                 Table2SQLObj.table2sqlobj(sqlMeta, null, "(" + sql + ")", crossDs);
